chore(analytics): add vercel analytics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "Nuxt"
+    "Nuxt",
+    "vercel"
   ],
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
