--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/icon": "1.12.0",
     "@nuxt/image": "1.10.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "eslint": "^9.26.0",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
