--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.0",
+    "@types/fs-extra": "^11.0.4",
     "@unocss/eslint-plugin": "^66.1.0",
     "eslint": "^9.26.0",
     "eslint-plugin-format": "^1.0.1",
+    "fs-extra": "^11.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0"
   },
