--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/fonts": "0.11.3",
     "@nuxt/icon": "1.12.0",
     "@nuxt/image": "1.10.0",
+    "@unocss/reset": "^66.1.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "eslint": "^9.26.0",
@@ -29,11 +30,13 @@
     "@antfu/eslint-config": "^4.13.0",
     "@types/fs-extra": "^11.0.4",
     "@unocss/eslint-plugin": "^66.1.0",
+    "@unocss/nuxt": "^66.1.1",
     "eslint": "^9.26.0",
     "eslint-plugin-format": "^1.0.1",
     "fs-extra": "^11.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.0.0"
+    "lint-staged": "^16.0.0",
+    "unocss": "^66.1.1"
   },
   "lint-staged": {
     "*": "eslint --fix"
