feat: init home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "jiti",
+    "mingcute",
     "Nuxt",
     "ofetch",
+    "unocss",
     "vercel"
   ],
   "editor.formatOnSave": false,
