--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.6",
     "@nuxt/eslint": "1.3.0",
     "@nuxt/fonts": "0.11.3",
     "@nuxt/icon": "1.12.0",
@@ -21,13 +22,16 @@
     "@unocss/reset": "^66.1.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@vueuse/nuxt": "13.1.0",
     "eslint": "^9.26.0",
+    "motion-v": "1.1.0-alpha.1",
     "nuxt": "^3.17.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.0",
+    "@iconify-json/mingcute": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
     "@unocss/eslint-plugin": "^66.1.0",
     "@unocss/nuxt": "^66.1.1",
@@ -36,6 +40,8 @@
     "fs-extra": "^11.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
+    "sass-embedded": "^1.88.0",
+    "typescript": "^5.8.3",
     "unocss": "^66.1.1"
   },
   "lint-staged": {
