feat(api): add api return hero skin

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,5 +3,7 @@ onlyBuiltDependencies:
   - vue-demi
 publicHoistPattern:
   - jiti
+  - lodash-es
   - ofetch
+  - '@types/lodash-es'
   - '@unocss/core'
