--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@nuxt/fonts": "0.11.3",
     "@nuxt/icon": "1.12.0",
     "@nuxt/image": "1.10.0",
-    "@unocss/reset": "^66.1.1",
+    "@tailwindcss/vite": "^4.1.7",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "@vueuse/nuxt": "13.1.0",
     "eslint": "^9.26.0",
     "motion-v": "1.1.0-alpha.1",
     "nuxt": "^3.17.2",
+    "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
@@ -33,8 +34,6 @@
     "@antfu/eslint-config": "^4.13.0",
     "@iconify-json/mingcute": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
-    "@unocss/eslint-plugin": "^66.1.0",
-    "@unocss/nuxt": "^66.1.1",
     "eslint": "^9.26.0",
     "eslint-plugin-format": "^1.0.1",
     "fs-extra": "^11.3.0",
@@ -42,8 +41,7 @@
     "lint-staged": "^16.0.0",
     "nuxt-lodash": "^2.5.3",
     "sass-embedded": "^1.88.0",
-    "typescript": "^5.8.3",
-    "unocss": "^66.1.1"
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
     "*": "eslint --fix"
