--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,9 +1,13 @@
 onlyBuiltDependencies:
+  - '@parcel/watcher'
+  - '@tailwindcss/oxide'
   - '@vercel/speed-insights'
+  - esbuild
+  - sharp
+  - unrs-resolver
   - vue-demi
 publicHoistPattern:
   - jiti
   - lodash-es
   - ofetch
   - '@types/lodash-es'
-  - '@unocss/core'
